[tool.poetry]
name = "starlette-aad"
version = "0.0.0"
description = "ASGI Middleware to verify and check jwt tokens from Azure AD"
authors = ["Idar <idarbergli@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.13.3"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
pydantic = "^1.5.1"
starlette = "^0.13.4"
msal = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.0"
pytest-xdist = "^1.32.0"
mypy = "^0.782"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.8.3"
isort = "^5.0.4"

[tool.poetry.scripts]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
